# my-agent

./: .env.example  .gitignore  AGENT.md  Containerfile  README.md  build-container.sh  pyproject.toml  run-container.sh
agent/: app.py  audio.py  llm.py  llm_base.py  llm_factory.py  llm_openai.py  llm_zai.py  main.py  settings.py  skill_loader.py  tools.py
agent/api/: server.py
agent/core/: agent.py  event_logger.py  events.py  messaging.py  runtime.py  sender.py  settings.py
agent/engine/: app.py  scheduler.py  worker.py
agent/llm/: agent.py  base.py  copilot.py  factory.py  openai.py  prompt.py  prompt_builder.py  types.py
agent/messaging/: feishu.py  gateway.py  sender.py  source.py  websocket.py
agent/tools/: __init__.py  command_executor.py  cron.py  markdown.py  messaging.py  registry.py  skill.py  skill_loader.py  tool_registry.py  toolbox.py
assets/: test_chat.html
docs/: specification.md
template/: CONTEXT.md  IDENTITY.md  TOOLS.md  USER.md
tests/: __init__.py  conftest.py  test_agent_compress.py  test_api.py  test_channel.py  test_command_executor.py  test_github_copilot.py  test_response_access.py  test_skill_loader.py  test_tool_registry.py
