[project]
name = "my-agent"
version = "0.1.0"
description = "A system-level LLM agent for assisting with commands and problem-solving."
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pydantic-settings",
    "python-dotenv",
    "ddgs",
    "rich",
    "trafilatura",
    "zai-sdk>=0.1.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.0",
    "ruff>=0.14.7",
]

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
