[project]
name = "my-agent"
version = "0.1.0"
description = "A system-level LLM agent for assisting with commands and problem-solving."
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pydantic-settings",
    "ddgs",
    "rich",
    "trafilatura",
    "tenacity",
    "aiohttp",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.0",
    "ruff>=0.14.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
